force-app/main/default/objects/Host_Application__c/Host_Application__c.object-meta.xml
<CustomObject>
  <label>Host Application</label>
  <pluralLabel>Host Applications</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Host Application #</label>
    <displayFormat>HA-{00000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>