force-app/main/default/objects/Host_Application__c/fields/Address__c.field-meta.xml
<CustomField>
  <fullName>Address__c</fullName>
  <label>Address</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>