force-app/main/default/objects/Host_Application__c/fields/External_Auth_Subject__c.field-meta.xml
<CustomField>
  <fullName>External_Auth_Subject__c</fullName>
  <label>External Auth Subject</label>
  <length>255</length>
  <type>Text</type>
  <unique>true</unique>
</CustomField>