force-app/main/default/objects/Host_Application__c/fields/First_Name__c.field-meta.xml
<CustomField>
  <fullName>First_Name__c</fullName>
  <label>First Name</label>
  <length>80</length>
  <type>Text</type>
</CustomField>