force-app/main/default/objects/Host_Application__c/fields/Last_Name__c.field-meta.xml
<CustomField>
  <fullName>Last_Name__c</fullName>
  <label>Last Name</label>
  <length>80</length>
  <type>Text</type>
</CustomField>