force-app/main/default/objects/Host_Application__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>Submitted</fullName><default>true</default></value>
      <value><fullName>Under_Review</fullName></value>
      <value><fullName>Approved</fullName></value>
      <value><fullName>Rejected</fullName></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>